    -- LP: #264622
       [new watermark plugin]
    -- LP: #342034
       [new reflection plugin]
    -- LP: #374192
       [new distortion plugin]
    -- LP: #375069
       [new 3D rotate plugin]
  * Fixed bugs / minor improvements
    -- Show progress dialog when updating plugin information
    -- Show default application in separate menu item
    -- Use File::HomeDir instead of $ENV{ 'HOME' }
    -- LP: #312221
       [Item is drawn in bottom-right point of the cursor]
    -- LP: #336122
       [Ctrl+resize in editor moves the shape]
    -- LP: #340503
       [Show item properties on double-click]
    -- LP: #348595
       [keybindings don't work in ubuntu jaunty when using compiz]
    -- LP: #353819
       [check window border option when calculating shape]
    -- LP: #353824
       [fix advanced selection tool when using compiz]
    -- LP: #353830
       [do not capture the zoom window when using the simple selection]
    -- LP: #363708
       [lines of selected area get captured sometimes]
    -- LP: #340635
       [Preview in plugin dialogs takes too long]
    -- LP: #364165
       [dialogs should set the window title]
    -- LP: #365365
       [polaroid plugin text doesn't allow apostrophes]
    -- LP: #366695
       [control advanced selection tool with arrow keys]
    -- LP: #367513
       [desktop entry contains deprecated encoding key]
    -- LP: #370359
       [Watermark plugin doesn't say the allowed syntax]
    -- LP: #370367
       [DrawingTool -> View has multiple same options]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Fri, 15 May 2009 01:14:50 +0200 

shutter (0.70.2~ppa4) jaunty; urgency=low

  * fixed bugs
    -- LP: #339139
       [Shutter selects incorrect target window]
    -- LP: #340855 + LP: #340864
       [fixed save-as function]	
    -- LP: #340856
       [main window is partly visible on screenshots]
    -- LP: #340990
       [Shutter crashes when xserver grab fails]
    -- LP: #341459